<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">RakuPhotoMail</string>
    <string name="beta_app_name">RakuPhotoMail BETA</string>
    <string name="app_authors">UCOM Corporation.</string>
    <string name="app_copyright_fmt">Copyright 2011-
        <xliff:g>%s</xliff:g>
        COPYRIGHT (C) 2012 UCOM CORPORATION ALL RIGHTS RESERVED.
    </string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="app_authors_fmt">Authors:
        <xliff:g id="app_authors">%s</xliff:g>
    </string>
    <string name="app_revision_url">https://isprod-red/redmine/projects/jijibaba-dpfs</string>
    <string name="app_revision_fmt">Revision Information:
        <xliff:g id="app_revision_url">%s</xliff:g>
    </string>
    <string name="app_webpage_url">http://www.fttx.co.jp</string>
    <string name="app_libraries">We\'re using the following third-party libraries:
        <xliff:g id="app_libraries_list">%s</xliff:g>
    </string>
    <string name="app_emoji_icons">Emoji icons:
        <xliff:g id="app_emoji_icons_link">%s</xliff:g>
    </string>
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="read_messages_label">read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About
        <xliff:g id="app_name">%s</xliff:g>
    </string>
    <string name="accounts_title">Accounts</string>
    <string name="advanced">Advanced</string>
    <string name="folder_list_title">
        <xliff:g id="account">%s</xliff:g>
    </string>
    <string name="shortcuts_title">Rakuphoto Mail Accounts</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:
        <xliff:g id="folder">%s</xliff:g>
    </string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="choose_color_title">Choose a Color</string>
    <string name="activity_header_format">
        <xliff:g id="activity_prefix">%s</xliff:g>
        <xliff:g id="unread_count">%s</xliff:g>
        <xliff:g id="operation">%s</xliff:g>
    </string>
    <string name="activity_unread_count">\u0020[<xliff:g id="unread_count">%d</xliff:g>]
    </string>
    <string name="status_loading_account_folder">\u0020(Poll<xliff:g id="account">%s</xliff:g>:
        <xliff:g id="folder">%s</xliff:g>
        <xliff:g id="progress">%s</xliff:g>)
    </string>
    <string name="status_loading_account_folder_headers">\u0020(Fetching headers<xliff:g id="account">%s</xliff:g>:
        <xliff:g id="folder">%s</xliff:g>
        <xliff:g id="progress">%s</xliff:g>)
    </string>
    <string name="status_sending_account">\u0020(Sending
        <xliff:g id="account">%s</xliff:g>
        <xliff:g id="progress">%s</xliff:g>)
    </string>
    <string name="status_processing_account">\u0020(Proc<xliff:g id="account">%s</xliff:g>:
        <xliff:g id="command">%s</xliff:g>
        <xliff:g id="progress">%s</xliff:g>)
    </string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%s</xliff:g>/
        <xliff:g id="total">%s</xliff:g>
    </string>
    <string name="status_next_poll">\u0020(Next poll @<xliff:g id="nexttime">%s</xliff:g>)
    </string>
    <string name="status_syncing_off">\u0020(Syncing disabled)</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="delete_all_action">Clear folder</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="continue_action">Continue</string>
    <string name="done_action">Done</string>
    <string name="remove_action">Remove</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="retry_action">Retry</string>
    <string name="refresh_action">Refresh</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="list_folders_action">Folder list</string>
    <string name="refresh_folders_action">Refresh folders</string>
    <string name="mark_all_as_read_action">Mark all messages as read</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="open_action">Open</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="accounts_action">Accounts</string>
    <string name="back_to_accounts_action">◀</string>
    <string name="back_to_folder_list_action">◀</string>
    <string name="read_action">Read</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="mark_all_as_read_dlg_title">Mark all messages as read</string>
    <string name="mark_all_as_read_dlg_instructions_fmt">Mark all messages in \'<xliff:g id="folder">%s</xliff:g>\' as
        read? (including
        messages in the folder that are not displayed in RakuPhotoMail)
    </string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="show_full_header_action">Show full header</string>
    <string name="hide_full_header_action">Hide full header</string>
    <string name="select_text_action">Select text</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="move_to_action">Move to</string>
    <string name="folders_action">Folders</string>
    <string name="view_hide_details_action">View/hide details</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="edit_subject_action">Edit subject</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="add_attachment_action_image">Add attachment (Image)</string>
    <string name="add_attachment_action_video">Add attachment (Video)</string>
    <string name="dump_settings_action">Dump settings</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="clear_local_folder_action">Clear local messages</string>
    <string name="set_sort_action">Choose sort</string>
    <string name="reverse_sort_action">Reverse sort</string>
    <string name="about_action">About</string>
    <string name="account_setup_names_instructions">Your account is set up, and mail is on its way!</string>
    <string name="account_setup_names_user_name_label">Type your name (displays on outgoing messages):</string>
    <string name="account_setup_incoming_username_label">Username</string>
    <string name="account_setup_incoming_password_label">Password</string>
    <string name="account_setup_incoming_pop_server_label">POP3 server</string>
    <string name="account_setup_incoming_port_label">Port</string>
    <string name="account_setup_incoming_security_label">Security type</string>
    <string name="account_setup_incoming_auth_type_label">Authentication type</string>
    <string name="local_storage_provider_label">Storage location</string>
    <string name="drafts_folder_label">Drafts folder</string>
    <string name="sent_folder_label">Sent folder</string>
    <string name="trash_folder_label">Trash folder</string>
    <string name="spam_folder_label">Spam folder</string>
    <string name="account_setup_auto_expand_folder">Auto-expand folder</string>
    <string name="account_settings_composition">Sending mail</string>
    <string name="account_settings_default_quoted_text_shown_label">Quote original message when replying</string>
    <string name="account_settings_default_quoted_text_shown_summary">When replying to messages, the original message is
        in your reply.
    </string>
    <string name="account_settings_reply_after_quote_label">Reply after quoted text</string>
    <string name="account_settings_reply_after_quote_summary">When replying to messages, the original message will
        appear above your reply.
    </string>
    <string name="account_settings_message_format_label">Message Format</string>
    <string name="account_settings_quote_style_label">Reply quoting style</string>
    <string name="account_settings_general_title">General settings</string>
    <string name="account_settings_sync">Fetching mail</string>
    <string name="account_settings_folders">Folders</string>
    <string name="account_settings_quote_prefix_label">Quoted text prefix</string>
    <string name="account_settings_storage_title">Storage</string>
    <string name="account_settings_incoming_label">Incoming server</string>
    <string name="account_settings_incoming_summary">Configure the incoming mail server</string>
    <string name="account_settings_outgoing_label">Outgoing server</string>
    <string name="account_settings_outgoing_summary">Configure the outgoing mail (SMTP) server</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_composition_label">Composition defaults</string>
    <string name="account_settings_composition_summary">Set your default From, Bcc and signature</string>
    <string name="account_settings_identities_label">Manage identities</string>
    <string name="account_settings_identities_summary">Set up alternate \'From\' addresses and signatures</string>
    <string name="account_settings_slide_change_duration_label">"slide change duration"</string>
    <string name="account_settings_slide_change_duration_description">"configure slide change duration"</string>
    <string name="account_settings_server_sync_label">"mail server sync duration"</string>
    <string name="account_settings_server_sync_description">"configure server sync duration"</string>
    <string name="account_settings_download_cache_label">"download file local cache"</string>
    <string name="account_settings_scale_ratio_label">"image display size"</string>
    <string name="account_settings_scale_ratio_description">"configure image display size"</string>
    <string name="account_password_hint">アカウントパスワード</string>
    <string name="account_incoming_server_hint">受信サーバ名</string>
    <string name="account_incoming_port_hint">受信サーバポート</string>
    <string name="account_setup_names_user_name_hint">送信メールの表示名</string>
    <string name="account_settings_download_message_size_label">1 mail message size</string>
</resources>