<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
            android:title="@string/account_settings_general_title"
            android:key="account_settings">

        <EditTextPreference
                android:persistent="false"
                android:key="account_description"
                android:singleLine="true"
                android:title="@string/account_settings_description_label"
                android:summary=""
                android:dialogTitle="@string/account_settings_description_label"/>

        <ListPreference
                android:persistent="false"
                android:key="account_slide_change_duration"
                android:title="@string/account_settings_slide_change_duration_label"
                android:entries="@array/account_settings_slide_change_duration_entries"
                android:entryValues="@array/account_settings_slide_change_duration_values"
                android:dialogTitle="@string/account_settings_slide_change_duration_label"/>

        <ListPreference
                android:persistent="false"
                android:key="account_scale_ratio"
                android:title="@string/account_settings_scale_ratio_label"
                android:entries="@array/account_settings_scale_ratio_entries"
                android:entryValues="@array/account_settings_scale_ratio_duration_values"
                android:dialogTitle="@string/account_settings_scale_ratio_label"/>

    </PreferenceScreen>

    <PreferenceScreen
            android:title="@string/account_settings_sync"
            android:key="incoming_prefs">

        <ListPreference
                android:persistent="false"
                android:key="account_server_sync"
                android:title="@string/account_settings_server_sync_label"
                android:entries="@array/account_settings_server_sync_entries"
                android:entryValues="@array/account_settings_server_sync_values"
                android:dialogTitle="@string/account_settings_server_sync_label"/>
        <ListPreference
                android:persistent="false"
                android:key="account_download_cache"
                android:title="@string/account_settings_download_cache_label"
                android:entries="@array/account_settings_download_cache_entries"
                android:entryValues="@array/account_settings_download_cache_values"
                android:dialogTitle="@string/account_settings_download_cache_label"/>
        <ListPreference
                android:persistent="false"
                android:key="account_download_size"
                android:title="@string/account_settings_download_message_size_label"
                android:entries="@array/account_settings_download_message_size_entries"
                android:entryValues="@array/account_settings_download_message_size_values"
                android:dialogTitle="@string/account_settings_download_message_size_label"/>

        <PreferenceScreen
                android:key="incoming"
                android:title="@string/account_settings_incoming_label"
                android:summary="@string/account_settings_incoming_summary"/>

    </PreferenceScreen>

    <PreferenceScreen
            android:title="@string/account_settings_composition"
            android:key="composing">

        <PreferenceScreen
                android:key="composition"
                android:summary="@string/account_settings_composition_summary"
                android:title="@string/account_settings_composition_label"/>

        <PreferenceScreen
                android:key="manage_identities"
                android:title="@string/account_settings_identities_label"
                android:summary="@string/account_settings_identities_summary"/>

        <ListPreference
                android:persistent="false"
                android:key="message_format"
                android:title="@string/account_settings_message_format_label"
                android:entries="@array/account_settings_message_format_entries"
                android:entryValues="@array/account_settings_message_format_values"/>

        <ListPreference
                android:persistent="false"
                android:key="quote_style"
                android:title="@string/account_settings_quote_style_label"
                android:entries="@array/account_settings_quote_style_entries"
                android:entryValues="@array/account_settings_quote_style_values"/>

        <CheckBoxPreference
                android:persistent="false"
                android:key="default_quoted_text_shown"
                android:title="@string/account_settings_default_quoted_text_shown_label"
                android:defaultValue="true"
                android:summary="@string/account_settings_default_quoted_text_shown_summary"/>

        <CheckBoxPreference
                android:persistent="false"
                android:key="reply_after_quote"
                android:title="@string/account_settings_reply_after_quote_label"
                android:defaultValue="false"
                android:summary="@string/account_settings_reply_after_quote_summary"/>

        <EditTextPreference
                android:persistent="false"
                android:key="account_quote_prefix"
                android:singleLine="true"
                android:title="@string/account_settings_quote_prefix_label"
                android:summary=""
                android:dialogTitle="@string/account_settings_quote_prefix_label"/>

        <PreferenceScreen
                android:key="outgoing"
                android:title="@string/account_settings_outgoing_label"
                android:summary="@string/account_settings_outgoing_summary"/>

    </PreferenceScreen>

    <PreferenceScreen
            android:title="@string/account_settings_folders"
            android:enabled="false"
            android:key="folders">

        <ListPreference
                android:persistent="false"
                android:key="account_setup_auto_expand_folder"
                android:title="@string/account_setup_auto_expand_folder"
                android:summary=""/>

        <ListPreference
                android:persistent="false"
                android:key="drafts_folder"
                android:title="@string/drafts_folder_label"
                android:dialogTitle="@string/drafts_folder_label"/>

        <ListPreference
                android:persistent="false"
                android:key="sent_folder"
                android:title="@string/sent_folder_label"
                android:dialogTitle="@string/sent_folder_label"/>

        <ListPreference
                android:persistent="false"
                android:key="spam_folder"
                android:title="@string/spam_folder_label"
                android:dialogTitle="@string/spam_folder_label"/>
        <ListPreference
                android:persistent="false"
                android:key="trash_folder"
                android:title="@string/trash_folder_label"
                android:dialogTitle="@string/trash_folder_label"/>

    </PreferenceScreen>
    <PreferenceScreen
            android:title="@string/account_settings_storage_title"
            android:key="folders">

        <ListPreference
                android:persistent="false"
                android:key="local_storage_provider"
                android:title="@string/local_storage_provider_label"
                android:dialogTitle="@string/local_storage_provider_label"
                />
    </PreferenceScreen>
</PreferenceScreen>
