<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/settings"
            android:title="@string/preferences_action"
            android:icon="@drawable/ic_menu_preferences">
        <menu>
            <item
                    android:id="@+id/account_settings"
                    android:title="@string/account_settings_action"
                    android:icon="@android:drawable/ic_menu_preferences"
                    />
            <item
                    android:id="@+id/app_settings"
                    android:title="@string/global_settings_action"
                    android:icon="@android:drawable/ic_menu_preferences"
                    />
        </menu>
    </item>
    <item
            android:id="@+id/buttons_disabled"
            android:title="ボタンON/OFF"
            android:icon="@drawable/ic_menu_edit">
    </item>
</menu>
