<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="54dip"
            android:padding="6dip"
            android:fadingEdge="none"
            android:scrollbarStyle="outsideInset">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
            <TextView
                    android:text="@string/account_setup_incoming_username_label"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"/>
            <EditText
                    android:id="@+id/account_username"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:hint="@string/account_setup_username_label_hint"
                    android:contentDescription="@string/account_setup_incoming_username_label"/>
            <TextView
                    android:text="@string/account_setup_incoming_password_label"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"/>
            <EditText
                    android:id="@+id/account_password"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_password_hint"
                    android:layout_width="fill_parent"/>
            <CheckBox
                    android:id="@+id/account_incoming_password_visible_checkbox"
                    android:text="@string/account_password_visible_checkbox_on"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_below="@+id/account_password"
                    android:checked="false"
                    />
            <TextView
                    android:id="@+id/account_server_label"
                    android:text="@string/account_setup_incoming_pop_server_label"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"
                    android:contentDescription="@string/account_setup_incoming_password_label"/>
            <EditText
                    android:id="@+id/account_server"
                    android:singleLine="true"
                    android:inputType="textUri"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_incoming_server_hint"
                    android:layout_width="fill_parent"/>
            <TextView
                    android:text="@string/account_setup_incoming_security_label"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"/>
            <Spinner
                    android:id="@+id/account_security_type"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:contentDescription="@string/account_setup_incoming_security_label"/>
            <TextView
                    android:id="@+id/account_auth_type_label"
                    android:text="@string/account_setup_incoming_auth_type_label"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"/>
            <Spinner
                    android:id="@+id/account_auth_type"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:contentDescription="@string/account_setup_incoming_auth_type_label"/>
            <TextView
                    android:text="@string/account_setup_incoming_port_label"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"/>
            <EditText
                    android:id="@+id/account_port"
                    android:singleLine="true"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:hint="@string/account_incoming_port_hint"
                    android:contentDescription="@string/account_setup_incoming_port_label"/>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/wizard_next"/>
</LinearLayout>
